[gd_scene load_steps=16 format=2]

[ext_resource path="res://RedBaddieSprite.gd" type="Script" id=1]
[ext_resource path="res://RedBaddie.gd" type="Script" id=2]
[ext_resource path="res://assets/Standard sprites upd.png" type="Texture" id=3]
[ext_resource path="res://assets/ghost.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 112, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 128, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 144, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 160, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 176, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 192, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "ghosting",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=24]
radius = 3.0

[sub_resource type="CircleShape2D" id=25]
radius = 4.0

[node name="RedBaddie" type="KinematicBody2D"]
position = Vector2( 396.653, 286.027 )
scale = Vector2( 5, 5 )
script = ExtResource( 2 )

[node name="RedBaddieSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 23 )
animation = "ghosting"
frame = 1
playing = true
script = ExtResource( 1 )

[node name="TerrainCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 24 )

[node name="RedBaddieHurtArea" type="Area2D" parent="."]

[node name="RedBaddieHurtAreaShape" type="CollisionShape2D" parent="RedBaddieHurtArea"]
shape = SubResource( 25 )
